--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ body{
 /*DARK MODE TOGGLE SWITCH*/
 
 
-.switch {
+#switch {
   position: relative;
   display: inline-block;
   width: 40px;
@@ -408,7 +408,7 @@ body{
   top: 28px;
 }
 
-.switch input {
+#switch input {
   opacity: 0;
   width: 0;
   height: 0;
