--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ body{
 	padding-top: 5px;
 	font-size: 55px;
 	color: white;
+	-webkit-user-select: none;     
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #title_t{
