--- a/css/style_bm.css
+++ b/css/style_bm.css
@@ -33,6 +33,10 @@ body{
 	padding-top: 5px;
 	font-size: 55px;
 	color: #333333;
+	-webkit-user-select: none;     
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #title_t{
