--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -1,25 +1,25 @@
 body{
-	font-family: 'Calibri';
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+	src: url(https://fonts.gstatic.com/l/font?kit=J7afnpV-BGlaFfdAhLEY6w&skey=a1029226f80653a8&v=v11) format('woff2');
 	color: #e8e8e8;
 	background-color: #212121;
 	transition: 0.5s;
-	-webkit-user-select: none;     
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+	height: 100%;
+	overflow: hidden
 }
 
 #main{
 	max-width: 1000px;
 	height: 800px;
 	margin: auto;
-	margin-top: 25px;
 	background-color: #333333;
 	box-shadow: 0px 0px 20px -2px black;
 	border: 1px solid black;
 	box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+	margin-bottom: 20px;
+	overflow: hidden
 }
 
 #header{
@@ -36,127 +36,211 @@ body{
 	padding-top: 5px;
 	font-size: 55px;
 	color: white;
+	-webkit-user-select: none;     
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 	font-variant: small-caps;
 }
 
 #title_t{
-	position: relative;
-	left: 20px;
 }
 
 #block{
-	width: 95%;
-	height: 83%;
-	margin: auto;
+	width: 100%;
+	height: 90%;
+}
+
+#l_block{
+	width: 100%;
+	height: 100%;
+	float: left;
+}
+
+#r_block{
+	
+}
+
+#output_block{
+	width: 100%;
+	height: 30%;
+	padding: 4px 4px 2px 4px;
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+#output_window{
+	width: 100%;
+	height: 100%;
+	background-color: #363636;
+	text-align: right;
+	font-size: 38px;
+	padding: 20px;
+	word-wrap: break-word;
 	box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 	overflow: auto;
 }
 
-.filler_top{
-	width: 100%;
-	height: 2%;
-}
-
-.filler_bottom{
-	width: 100%;
-	height: 5%;
-}
-
-.l_title{
-	width: 100%;
-	height: 10%;
-	background-color: #2f2f2f;
-	border-radius: 5px 0px 0px 5px;
-	box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-	overflow: hidden;
+#output{
 	transition: 0.2s;
 }
 
-.legend{
+#equation{
+	font-size: 18px;
+	color: #d1d1d1;
+	transition: 0.2s;
+}
+
+#panel{
 	width: 100%;
-	height: 10%;
-	margin-top: 10px;
-	background-color: #2f2f2f;
-	border-radius: 5px 0px 0px 5px;
-	box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-	overflow: hidden;
-	transition: 0.2s;
-}
-
-.l_title:hover{
-	background-color: #292929;
-	transition: 0.2s;
-}
-
-.legend:hover{
-	background-color: #292929;
-	transition: 0.2s;
-}
-
-.l_left{
-	width: 25%;
-	height: 100%;
-	padding: 12px;
-	font-size: 30px;
-	text-align: center;
-	border-right: 1px solid #242424;
-	float: left;
-	font-variant: small-caps;
-	box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
-
-.l_right{
-	width: 75%;
-	height: 100%;
+	height: 70%;
+	padding-left: 2px;
+	padding-right: 2px;
+	padding-bottom: 2px;
 	text-align: center;
 	font-size: 20px;
-	padding: 19px;
-	float: right;
-	font-variant: small-caps;
+	font-weight: bold;
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	-webkit-user-select: none;     
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.button_holder{
+	width: 25%;
+	height: 20%;
+	padding: 2px;
+	float: left;
 	box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
 
-.l_main{
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	font-size: 40px;
-	color: white;
-	padding: 7px;
-	float: right;
-	font-variant: small-caps;
+.button_holder_big{
+	width: 50%;
+	height: 20%;
+	padding: 2px;
+	float: left;
 	box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+}
+
+.button_function{
+	width: 100%;
+	height: 100%;
+	background-color: #2b2b2b; /*#2b2b2b*/
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	transition: 0.5s;
+}
+
+.button_function_equals{
+	width: 100%;
+	height: 100%;
+	background-color: #c40038;
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	transition: 0.5s;
+}
+
+.button_number{
+	width: 100%;
+	height: 100%;
+	background-color: #242424; /*#242424*/
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	transition: 0.5s;
+}
+
+.button_number_big{
+	width: 100%;
+	height: 100%;
+	background-color: #242424; /*#242424*/
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	transition: 0.5s;
+}
+
+.button_center{
+	position: relative;
+	top: 38%;
+	width: 100%;
+}
+
+.button_function:active{
+	background-color: #2e2e2e;
+	transition: 0.2s;
+}
+
+.button_function_equals:active{
+	background-color: #96002b;
+	transition: 0.2s;
+}
+
+.button_number:active{
+	background-color: #2e2e2e;
+	transition: 0.2s;
+}
+
+.button_number_big:active{
+	background-color: #2e2e2e;
+	transition: 0.2s;
+}
+
+.block_holder{
+	width: 100%;
+	height: 12.5%;
+	padding: 2px;
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.h_block{
+	
 }
 
 #buttons_left{
-	position: relative;
-	bottom: 765px;
-	left: 20px;
+	height: 120px;
+	width: 40px;
+	float: left;
+	position: absolute;
+	background-color: white;
+	opacity: 1;
 }
 
 #gb{
 	width: 30px;
 	height: 7.5px;
+	margin-top: 5px;
+	margin-left: 4.5px;
 	float: left;
+	clear: both;
 }
 
 #pl{
 	width: 30px;
 	height: 7.5px;
 	float: left;
-	margin-left: 5px;
+	margin-left: 4.5px;
+	margin-top: 30px;
+	clear: both;
+}
+
+#help:active{
+	background-color: #2e2e2e;
+	transition: 0.2s;
 }
 
 #gb_img{
@@ -169,46 +253,13 @@ body{
 	box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.6);
 }
 
-#gb:hover{
+#gb:active{
 	opacity: 0.7;
 	transition: 0.2s;
 }
 
-#pl:hover{
+#pl:active{
 	opacity: 0.7;
-	transition: 0.2s;
-}
-
-#back{
-	position: relative;
-	height: 40px;
-	width: 40px;
-	float: right;
-	background-color: #242424;
-	color: #ebebeb;
-	font-size: 30px;
-	font-weight: bold;
-	text-align: center;
-	right: 80px;
-	bottom: 777px;
-	border-radius: 5px;
-	box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-	transition: 0.2s;
-	-webkit-user-select: none;     
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-#back:hover{
-	background-color: #bababa;
-	transition: 0.2s;
-}
-
-#back:active{
-	background-color: #a7a7a7;
 	transition: 0.2s;
 }
 
@@ -256,8 +307,8 @@ body{
 /*DARK MODE TOGGLE SWITCH*/
 /*DARK MODE TOGGLE SWITCH*/
 
-
-.switch {
+/*
+#switch {
   position: relative;
   display: inline-block;
   width: 40px;
@@ -267,7 +318,7 @@ body{
   top: 28px;
 }
 
-.switch input {
+#switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -314,3 +365,4 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+/*
