--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -33,7 +33,6 @@ body{
 #title{
 	text-align: center;
 	box-sizing: border-box;
-	padding-top: 5px;
 	font-size: 55px;
 	color: white;
 	-webkit-user-select: none;     
@@ -214,15 +213,16 @@ body{
 #buttons_left{
 	height: 120px;
 	width: 40px;
+	padding-top: 10px;
+	margin-left: 5px;
 	float: left;
 	position: absolute;
-	background-color: white;
 	opacity: 1;
 }
 
 #gb{
-	width: 30px;
-	height: 7.5px;
+	width: 25px;
+	height: 6.3px;
 	margin-top: 5px;
 	margin-left: 4.5px;
 	float: left;
@@ -230,11 +230,11 @@ body{
 }
 
 #pl{
-	width: 30px;
-	height: 7.5px;
+	width: 25px;
+	height: 6.3px;
 	float: left;
 	margin-left: 4.5px;
-	margin-top: 30px;
+	margin-top: 20px;
 	clear: both;
 }
 
